--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<h3 class="heading">About Me</h3>
 			
 			<p class="text">
-				I'm currently a sophomore studying Computer Science at Cornell University. I live in the Bay Area. I like to build and destroy things. I enjoy working with hardware and software and especially like embedded systems and robotics.
+				I'm currently a MEng student studying Computer Science at Cornell University. I live in the Bay Area. I like to build and destroy things. I enjoy working with hardware and software and especially like embedded systems and robotics.
 			</p>
 			
 
