--- a/hacks.html
+++ b/hacks.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="fonts/stylesheet.css" />
     <link
-      href="http://fonts.googleapis.com/css?family=Ropa+Sans"
+      href="https://fonts.googleapis.com/css?family=Ropa+Sans"
       rel="stylesheet"
       type="text/css"
     />
     <link
-      href="http://fonts.googleapis.com/css?family=Open+Sans:400,300"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,300"
       rel="stylesheet"
       type="text/css"
     />
