--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" href="css/reset.css" />
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="fonts/stylesheet.css" />
-	<link href="//fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet" type="text/css" />
-	<link href="//fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
